--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <!-- <script src="js/simult_sim/event_emitter.js"></script> -->
 <!-- <script src="js/simult_sim/socket_io_client_adapter.js"></script> -->
 <!-- <script src="js/main.js"></script> -->
-<script src="js/bundle.js"></script>
+<script src="js/main_bundle.js"></script>
 <!-- <script src="js/bundle2.js"></script> -->
 </body>
 </html>
