Got rid of extra js output

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,6 @@
   <h1>SimSimJS Test</h1>
 
 <script src="/socket.io/socket.io.js"></script>
-<!-- <script src="js/simult_sim/simult_sim.js"></script> -->
-<!-- <script src="js/simult_sim/event_emitter.js"></script> -->
-<!-- <script src="js/simult_sim/socket_io_client_adapter.js"></script> -->
-<!-- <script src="js/main.js"></script> -->
-<script src="js/main_bundle.js"></script>
-<!-- <script src="js/bundle2.js"></script> -->
+<script src="js/main.js"></script>
 </body>
 </html>
