--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,13 @@
 <html>
 <head>
-  <title>SimSimJS Test</title>
+  <title>SimSimJS Examples</title>
 </head>
 <body>
-  <h1>SimSimJS Test</h1>
-  <button id="score-button" onclick="startSimulation()">START</button>
-  <div>
-    <pre id="score-board">(initial state)</pre>
-    <button id="score-button" onclick="scoreButtonClicked()">Score a Point</button>
-  </div>
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/main.js"></script>
+  <h1>SimSimJS Examples</h1>
+  <ul>
+  <li><a href="clicker.html">Clicker</a></li>
+  <li><a href="tanks.html">Tanks</a></li>
+  <li><a href="tanks2.html">Tanks 2</a></li>
+  </ul>
 </body>
 </html>
