--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
   <li><a href="tanks.html">Tanks</a></li>
   <li><a href="tanks2.html">Tanks 2</a></li>
   </ul>
+  <hr/>
+  <em><a href="http://github.com/dcrosby42/sim_sim_js">github/dcrosby42/sim_sim_js</a></em>
 </body>
 </html>
