--- a/public/pixitest2.html
+++ b/public/pixitest2.html
@@ -5,6 +5,8 @@
 	<script type="text/javascript" src="js/lib/Pixi.js"></script>
 	<script type="text/javascript" src="js/lib/Stats.js"></script>
 	<script type="text/javascript" src="js/lib/Box2D.js"></script>
+  <!-- <script type="text/javascript" src="js/lib/keymage.min.js"></script> -->
+  <script type="text/javascript" src="js/lib/mousetrap-1.4.6.min.js"></script>
 	<script type="text/javascript" src="js/pixitest2.js"></script>
   <!-- <script src="/socket.io/socket.io.js"></script> -->
 </head>
