--- a/public/pixitest2.html
+++ b/public/pixitest2.html
@@ -8,6 +8,7 @@
   <!-- <script type="text/javascript" src="js/lib/keymage.min.js"></script> -->
   <script type="text/javascript" src="js/lib/mousetrap-1.4.6.min.js"></script>
 	<script type="text/javascript" src="js/pixitest2.js"></script>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <!-- <script src="/socket.io/socket.io.js"></script> -->
 </head>
 <body>
