Trying to sync state after bad crc but something is wrong

--- a/public/bumpercats.html
+++ b/public/bumpercats.html
@@ -10,5 +10,7 @@
 	<script type="text/javascript" src="js/bumpercats.js"></script>
 </head>
 <body>
+  <button onclick="dropEvents()">Drop Events</button>
+  <button onclick="stopDroppingEvents()">Stop Dropping Events</button>
 </body>
 </html>
