It is .... working

--- a/public/bumpercats.html
+++ b/public/bumpercats.html
@@ -12,5 +12,8 @@
 <body>
   <button onclick="dropEvents()">Drop Events</button>
   <button onclick="stopDroppingEvents()">Stop Dropping Events</button>
+  &nbsp;
+  <button onclick="takeSnapshot()">Take Snapshot</button>
+  <button onclick="restoreSnapshot()">Restore Snapshot</button>
 </body>
 </html>
