Refactoring SimSim client lib code

--- a/public/bumpercats.html
+++ b/public/bumpercats.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="js/lib/Stats.js"></script>
 	<script type="text/javascript" src="js/lib/Box2D.js"></script>
   <script type="text/javascript" src="js/lib/mousetrap-1.4.6.min.js"></script>
+	<script type="text/javascript" src="js/sim_sim.js"></script>
 	<script type="text/javascript" src="js/bumpercats.js"></script>
 </head>
 <body>
